--- a/src/Pages/DashboardAccount/Style/filterDropdow.css
+++ b/src/Pages/DashboardAccount/Style/filterDropdow.css
@@ -2,15 +2,16 @@
   position: absolute;
   background-color: #d0d8e5;
   padding: 30px;
-  top: 20px;
-  right: 0px;
-  left: 0px;
+  top: 31px;
+  right: 0;
+  left: 0;
   z-index: 11;
-  display: none;
+  width: 100%;
+  /* display: none; */
 }
-.filter_img_md:hover .filter_dd_container {
+/* .filter_img_md:hover .filter_dd_container {
   display: block;
-}
+} */
 .filter_dd_container p {
   margin-bottom: 0px;
 }
@@ -94,12 +95,12 @@
     justify-content: flex-start;
   }
   .filter_secTwo {
-    width:100%;
+    width: 100%;
     margin-top: 15px;
   }
   .filter_secTwo > div {
-      display: flex;
-      flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
     /* flex-direction: inherit; */
   }
   .filter_two_section_One {
@@ -113,66 +114,69 @@
   .filters_sections {
     flex-direction: column;
   }
-  .filter_secOne{
-      width:100%;
+  .filter_secOne {
+    width: 100%;
   }
-  .filter_inp{
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
+  .filter_inp {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
-  .date_inp{
-      width: 48%;
+  .date_inp {
+    width: 48%;
   }
-  .filter_inp>input,.filter_inp>select{
-      width: 48%;
+  .filter_inp > input,
+  .filter_inp > select {
+    width: 48%;
   }
   .filter_two_section_One {
     margin-top: 15px !important;
   }
-  .filter_secTwo > div{
-      flex-wrap: wrap !important;
-      width: 100%;
+  .filter_secTwo > div {
+    flex-wrap: wrap !important;
+    width: 100%;
   }
-  .filter_secTwo label{
-      flex-wrap: wrap !important;
+  .filter_secTwo label {
+    flex-wrap: wrap !important;
   }
-  .filter_secOne,.filter_secTwo{
-      margin: 0px;
+  .filter_secOne,
+  .filter_secTwo {
+    margin: 0px;
   }
-  .filter_secTwo{
-      margin-top: 10px;
+  .filter_secTwo {
+    margin-top: 10px;
   }
-  .travel_filter{
-      margin-top: 15px;
+  .travel_filter {
+    margin-top: 15px;
   }
-  .filtr_head2{
-      margin-top: 15px;
+  .filtr_head2 {
+    margin-top: 15px;
   }
 }
 @media (max-width: 400px) {
-    .filter_dd_container{
-        width: 100%;
-    }
-    .filter_secOne input ,.filter_secOne select{
-        font-size: .8rem;
-    }
-    .filter_secOne input::placeholder{
-         font-size: .8rem;
-    }
+  .filter_dd_container {
+    width: 100%;
+  }
+  .filter_secOne input,
+  .filter_secOne select {
+    font-size: 0.8rem;
+  }
+  .filter_secOne input::placeholder {
+    font-size: 0.8rem;
+  }
 }
 @media (max-width: 370px) {
-    .filter_inp{
-        flex-wrap: wrap;
-        justify-content: flex-start;
-    }
-    .date_inp{
-        width: 100%;
-    }
-    .filter_inp>input{
-        width: 100%;
-    }
-    .filter_inp>select{
-        width: 100%;
-    }
+  .filter_inp {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .date_inp {
+    width: 100%;
+  }
+  .filter_inp > input {
+    width: 100%;
+  }
+  .filter_inp > select {
+    width: 100%;
+  }
 }
