--- a/src/Pages/DashboardAccount/Style/sidebar.css
+++ b/src/Pages/DashboardAccount/Style/sidebar.css
@@ -1,84 +1,90 @@
 /* sidebar comp  */
 
-.db_container>div:nth-child(2){
-    margin-left: 50px;
+.db_container > div:nth-child(2) {
+  margin-left: 50px;
 }
-.MuiDrawer-paper{
-    height: 86% !important;
-    top: 91px !important;
-}
-
-.sidebar_container{
-    padding: 0px 20px;
-}
-.sClose_img{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    width: 100%;
-}
-.sClose_img>h5{
-    margin-bottom: 0px;
-}
-.sb_opnBtn{
-    margin-top: 20px;
-    text-align: center;
-    margin-left: 10px;
-}
-.sb_head{
-    margin-top: 20px;
+.MuiDrawer-paper {
+  height: 86% !important;
+  top: 91px !important;
 }
 
-.sb_link{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-decoration: none;
-    color: #2E58A6;
-    /* margin: 10px 0px; */
-    /* border: 2px solid red; */
-    padding: 10px 0px;
-    text-align: center;
-}
-.sb_mob_link{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #2E58A6;
-    margin: 5px 0px;
-    /* border: 2px solid red; */
-    padding: 10px 0px;
-    text-align: center;
-}
-.sb_link p{
-    margin-bottom: 0px;
-    margin-left: 10px;
-    font-size: .8rem;
+.active_dash_link {
+  background-color: #f0f4fc;
 }
 
-.sb_link img:nth-child(1){
-    /* width: 18px; */
-    object-fit: cover;
-}
-.sb_imgD{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
+.sidebar_container .sb_link {
+  padding: 10px 20px !important;
 }
 
-.sub_sb_links{
-    padding-left: 15px;
+.sClose_img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+}
+.sClose_img > h5 {
+  margin-bottom: 0px;
+}
+.sb_opnBtn {
+  margin-top: 20px;
+  padding: 0 20px;
+  margin-left: 10px;
+}
+.sb_head {
+  margin-top: 20px;
+  padding: 0 20px;
 }
 
-.more_rotate{
-    /* rotate: 27; */
-    transform: rotate(90deg);
-    transition: .5s;
+.sb_link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  color: #2e58a6;
+  /* margin: 10px 0px; */
+  /* border: 2px solid red; */
+  padding: 10px 0px;
+  text-align: center;
 }
-.less_rotate{
-    transform: rotate(0deg);
-    transition: .5s;
+.sb_mob_link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #2e58a6;
+  margin: 5px 0px;
+  /* border: 2px solid red; */
+  padding: 10px 0px;
+  text-align: center;
+}
+.sb_link p {
+  margin-bottom: 0px;
+  margin-left: 10px;
+  font-size: 0.8rem;
+}
+
+.sb_link img:nth-child(1) {
+  /* width: 18px; */
+  object-fit: cover;
+}
+.sb_imgD {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.sub_sb_links {
+  padding-left: 15px;
+}
+
+.more_rotate {
+  /* rotate: 27; */
+  transform: rotate(90deg);
+  transition: 0.5s;
+}
+.less_rotate {
+  transform: rotate(0deg);
+  transition: 0.5s;
 }
