--- a/src/Components/Style/Chat.css
+++ b/src/Components/Style/Chat.css
@@ -13,12 +13,13 @@
     background-color: #f0f4fc;
     position: absolute;
     left: -297px;
-    top: -390px;
+    top: -370px;
     width: 300px;
     border-radius: 7px;
     box-shadow: 0px 0px 5px gainsboro;
     /* display: none; */
-    /* height: 60vh; */
+    height: 365px;
+    
   }
   .chatbox_md:hover > .helpChat_div {
     display: block;
@@ -56,7 +57,7 @@
     padding: 10px 5px;
     padding-left: 5px;
     padding-right: 5px;
-    /* height: 50vh; */
+    height: 310px;
     overflow: auto;
   }
   .help_msgs_div::-webkit-scrollbar {
@@ -80,12 +81,13 @@
     border-radius: 8px;
     margin-bottom: 0px;
     font-size: 0.85rem;
-    max-width: 212px;
+    /* max-width: 212px; */
+    width: 73%;
   }
   .date {
     text-align: right;
     color: #2e58a6;
-    font-size: 0.85rem;
+    font-size: 0.75rem;
     margin-top: 5px;
     width: 200px;
     margin: 5px auto;
@@ -94,7 +96,7 @@
   .date2 {
     text-align: start;
     color: #2e58a6;
-    font-size: 0.85rem;
+    font-size: 0.75rem;
     margin-top: 5px;
     width: 200px;
     margin: 5px auto;
@@ -156,6 +158,7 @@
     margin-bottom: 0px;
     font-size: 0.85rem;
     max-width: 212px;
+    font-weight: 300;
   }
 
  
