--- a/src/Pages/ApiDoc/ApiDoc.css
+++ b/src/Pages/ApiDoc/ApiDoc.css
@@ -7,19 +7,21 @@
 
 .api_doc_header {
   width: 100%;
-  height: 80px;
+  height: 63px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 4rem;
   background-color: #f0f4fc;
   position: fixed;
+  box-shadow: 0px 3px 6px #00000029;
 }
 
 .api_doc_header h2 {
   margin: 0;
   font-weight: 700;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
 }
 
 .api_doc_header span {
