--- a/src/Pages/OurPlans/OurPlans.css
+++ b/src/Pages/OurPlans/OurPlans.css
@@ -72,7 +72,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .active_fib {
