--- a/src/Pages/Partners/Partners.css
+++ b/src/Pages/Partners/Partners.css
@@ -18,10 +18,12 @@
 
 .partner_header {
   width: 100%;
-  height: 80px;
+  height: 63px;
   background-color: #f0f4fc;
   display: flex;
   align-items: center;
+  box-shadow: 0px 3px 6px #00000029;
+
 }
 
 .partner_header h2 {
