--- a/src/Pages/Blogs/Blog.css
+++ b/src/Pages/Blogs/Blog.css
@@ -3,6 +3,10 @@
   width: 100%;
   margin: 0px auto;
 }
+.blogCSFMain{
+  margin-top: 80px !important;
+  padding: 0px 10px;
+}
 .blog_head_search_div {
   display: flex;
   justify-content: space-between;
@@ -36,6 +40,12 @@
   /* margin: 0px 60px; */
   max-width: 1250px;
   margin: 30px auto;
+}
+.select_blog_para_data{
+  max-width: 1260px;
+  padding: 0px 10px;
+  margin: 40px auto !important;
+  margin-bottom: 0px !important;
 }
 
 .margin_top {
@@ -94,6 +104,12 @@
   font-weight: bold;
 }
 /* social feed comp  */
+.sblogPageFeed{
+  margin-top: -95px;
+}
+.sblogPageFeed .feed_div h4{
+  margin-left: 67px;
+}
 .feed_div h4 {
   text-align: start;
   margin-left: 30px;
@@ -307,6 +323,9 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+  .sblogPageFeed .feed_div h4{
+    margin-left: 30px;
+  }
   .upcomin_event_container {
     display: flex;
   }
@@ -372,7 +391,7 @@
 @media screen and (max-width: 550px) {
   .blog_main_div {
     /* margin: 50px 15px; */
-    padding: 0px;
+    padding: 0px 15px;
   }
   .blog_card_socail_feed_div {
     flex-wrap: wrap;
