--- a/src/Pages/Payment/Payment.css
+++ b/src/Pages/Payment/Payment.css
@@ -1,7 +1,7 @@
 /* form one  */
 
 .home_form_div_md {
-  background-color: #ffffff00;
+  background-color: #ffffff8a;
   /* box-shadow: 0px 0px 10px rgb(202, 202, 202); */
   box-shadow: 0px 3px 10px #00000029;
   border-radius: 5px;
@@ -327,8 +327,8 @@
 
 .paypal_box {
   width: 100%;
-  padding: 10px 5px;
-  margin: 0.5rem 0;
+  padding: 15px 5px;
+  margin: 0.6rem 0;
   border-radius: 5px;
   height: max-content;
   display: flex;
@@ -358,6 +358,10 @@
   box-shadow: 0px 3px 6px #00000029;
 }
 
+.pay_method .active_box {
+  padding: 15px 5px;
+}
+
 .paypal_box div:nth-of-type(1) img {
   width: 33px;
   height: 33px;
@@ -373,7 +377,7 @@
 }
 
 .paypal_box div:nth-of-type(2) img {
-  margin-top: -12px;
+  margin-top: -28px;
 }
 
 /* payment_stripe */
@@ -447,13 +451,15 @@
   padding: 8px 10px;
   background: #f0f4fc;
   border-radius: 5px;
-  box-shadow: inset 0 1px 2px rgb(83 83 83 / 39%), 0 -1px 0px #fff, 0 1px 0 #fff;
+  /* box-shadow: inset 0 1px 2px rgb(83 83 83 / 39%), 0 -1px 0px #fff, 0 1px 0 #fff; */
+  box-shadow: inset 0 2px 5px rgb(83 83 83 / 23%), 0 -1px 0px #fff, 0 0px 0 #fff;
 }
 
 .ps_input1 input {
   border: none;
   color: #2e58a6;
   margin: 0;
+  font-size: 0.9rem;
   width: 100%;
   outline: none;
   box-shadow: none;
@@ -515,6 +521,10 @@
 .payment_thank {
   width: 100%;
   padding: 4rem 0;
+}
+
+.payment_thank .home_form_btn {
+  width: max-content;
 }
 
 .ps_img {
@@ -745,6 +755,15 @@
   align-items: center;
   justify-content: center;
   box-shadow: 0px 3px 6px #00000029;
+}
+
+.otp_input input {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+  box-shadow: none;
 }
 
 .bank_otp .dont_text {
