--- a/src/Pages/ApiDoc/ApiDoc.css
+++ b/src/Pages/ApiDoc/ApiDoc.css
@@ -82,8 +82,9 @@
 .api_content {
   width: 100%;
   height: 500px;
-  padding: 30px 0;
+  padding: 30px 10px;
   overflow-y: auto;
+  padding-right: 20px;
 }
 
 .api_content::-webkit-scrollbar {
