--- a/src/Pages/DashboardAccount/AccountInfo/style.css
+++ b/src/Pages/DashboardAccount/AccountInfo/style.css
@@ -1,8 +1,15 @@
 .accInfo_container{
     background-color: #F0F4FC;
+    /* min-height: 100vh; */
+  min-height: calc(100vh - 90px) ;
+
 }
 .accInfo_sd{
     display: flex;
+}
+.accInfoHeadMain{
+    font-weight: 600;
+    font-size: 1.05rem !important;
 }
 
 .accInfo_rigth_md{
