--- a/src/Pages/DashboardAccount/Style/table.css
+++ b/src/Pages/DashboardAccount/Style/table.css
@@ -11,7 +11,7 @@
   width: 100%;
   font-size: 0.9em;
   overflow-x: auto;
-  min-width: 580px;
+  min-width: 590px;
   overflow: scroll;
   padding: 0px 8px;
 }
@@ -42,7 +42,7 @@
   box-shadow: 0px 3px 6px #00000029;
   background-color: white;
 }
-.db_table tr:hover {
+.db_table tbody tr:hover {
   background-color: #2e58a6;
   color: white !important;
   border-radius: 8px;
