--- a/src/Pages/OurPlans/OurPlans.css
+++ b/src/Pages/OurPlans/OurPlans.css
@@ -2,7 +2,11 @@
   width: 100%;
   margin-bottom: 2rem;
 }
-
+.smPln{
+  color: #748AA6;
+  font-size: .7rem;
+  text-align: end;
+}
 .our_plans_section .partner_header {
   margin: 1rem 0;
 }
@@ -12,7 +16,7 @@
   height: max-content;
   background: #f0f4fc;
   margin: 2rem auto;
-  padding: 0rem 1rem;
+  padding: 1rem 1rem;
   border-radius: 8px;
 }
 
@@ -41,8 +45,17 @@
   border-radius: 8px;
   margin: 0.3rem 0;
 }
-.feature_list span{
-  font-size: .9rem;
+.fTwoList{
+  /* display; */
+  flex-direction: column ;
+  text-align: right !important;
+  /* text-align: right; */
+  height:  auto;
+  padding-top: 10px;
+  align-items: flex-end !important;
+}
+.feature_list span {
+  font-size: 0.9rem;
 }
 
 .feature_item_box {
@@ -70,7 +83,7 @@
 
 .feature_item_box .fib_head {
   border-radius: 8px 8px 0 0;
-  padding-top: 32px;
+  padding-top: 24px;
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -82,13 +95,31 @@
   border: 1px solid #50c900;
 }
 
-.active_fib .fib_head {
+/* .active_fib .fib_head {
   background: #2e58a6;
+} */
+.activeHead{
+  background: #2e58a6;
+
+}
+.byDfBtnAct{
+  border: none;
+  background-color: white;
+  color: #2e58a6;
+  outline: none;
+}
+.byDfActive{
+  background: #2e58a6;
+  margin: 0px 0px;
+}
+.bRadius{
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-.active_fib h5,
-.active_fib span,
-.active_fib h2 {
+.activeHead h5,
+.activeHead span,
+.activeHead h2 {
   color: white !important;
 }
 
@@ -103,6 +134,7 @@
   color: #2e58a6;
   font-size: 1.2rem;
   font-weight: 700;
+  margin-bottom: 0;
 }
 
 .feature_item_box span {
@@ -150,6 +182,9 @@
   }
   .our_plan_row {
     width: 900px;
+  }
+  .feature_item_box .fib_head {
+    padding-top: 35px;
   }
   .our_plan_col::-webkit-scrollbar {
     width: 1px;
