--- a/src/Pages/Payment/Payment.css
+++ b/src/Pages/Payment/Payment.css
@@ -13,7 +13,7 @@
   position: relative;
   z-index: 999;
   text-align: center;
-  min-height: 52vh;
+  /* min-height: 52vh; */
 }
 .home_form_div_md > p {
   /* font-weight: 600; */
@@ -65,7 +65,7 @@
   outline: none;
   padding: 6px 12px;
   background-color: #f0f4fc;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   color: #2e58a6;
   opacity: 0.8;
   font-size: 0.8rem;
