--- a/src/Pages/TravelClaim/TravelClaim.css
+++ b/src/Pages/TravelClaim/TravelClaim.css
@@ -115,8 +115,33 @@
   width: 100%;
   padding-left: 36px;
   color: #2e58a6;
-  opacity: 0.8;
+  /* opacity: 0.8; */
   background-color: #e6ecf8;
+}
+.autoComplt{
+  /* width: 80%; */
+  box-shadow: inset 0 1px 2px rgba(83, 83, 83, 0.39), 0 -1px 0px #fff,
+  0 1px 0 #fff;
+border-radius: 5px;
+background-color: #e6ecf8;
+
+
+}
+.autoComplt input{
+  padding: 13px 0px !important;
+  box-shadow: none !important;
+  font-size: .9rem;
+  padding-left: 45px !important;
+  width: 100% !important;
+
+  color: #2e58a6;
+
+}
+.MuiInput-underline:before,.MuiInput-underline:after{
+  display: none;
+}
+.MuiAutocomplete-endAdornment{
+  display: none;
 }
 .stp_inp > input::placeholder {
   color: #2e58a6;
@@ -147,6 +172,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 0px;
 }
 
 .stp_back {
@@ -322,6 +348,7 @@
 .awayCheck {
   height: 25px !important;
   width: 70px !important;
+  background: white;
 }
 
 .flight_li input[type="checkbox"]:checked,
@@ -337,7 +364,8 @@
 .awayCheck:checked,
 .awayCheck:checked:active {
   height: 25px !important;
-  width: 50px !important;
+  width: 70px !important;
+  box-shadow: 0px 3px 6px #00000029;
 }
 
 .flight_li input[type="checkbox"]:active:not(:disabled) {
