--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -14,7 +14,6 @@
   position: relative;
   z-index: 999;
   text-align: center;
-  min-height: 52vh;
 }
 .started_form > p {
   font-size: 1.2rem;
@@ -37,7 +36,7 @@
   box-shadow: 0px 3px 6px #00000029;
   border: 1px solid #2e58a6;
   border-radius: 5px;
-  opacity: 0.5;
+  opacity: 0.4;
   display: flex;
   align-items: center;
   height: 40px;
@@ -55,6 +54,7 @@
   transform: rotate(270deg);
 }
 .activate {
+  border: 2px solid #2e58a6;
   opacity: 1;
 }
 .activate p{
